fix extra page margin on mobile

--- a/style.css
+++ b/style.css
@@ -966,7 +966,7 @@ a[data-lightbox]:hover img {
         float: none!important;
     }
 
-    .navbar.row {
+    .row {
         margin-left: 0;
         margin-right: 0;
     }
